# funasr-server

./: .coverage  .dockerignore  .env.a4000  .env.example  .env.h100  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
docker/: Dockerfile
scripts/: download_models.py
src/funasr_server/: __init__.py  app.py  config.py  dependencies.py  engine.py  errors.py  formatters.py  model_pool.py  profiles.py  schemas.py
src/funasr_server/routers/: models.py  transcriptions.py
tests/: test_api.py  test_app_middleware.py  test_dependencies.py  test_engine.py  test_engine_transcribe.py  test_model_pool.py  test_models_router.py  test_profiles.py  test_transcription_errors.py
